...
    const { signIn, isPending: isEmailPending, isSuccess, isError } = useEmailSignIn()
    const { signIn: loginWithPasskey, isPending: isPendingPasskey, isSupported } = usePasskeySignIn()

    const isLoading = isEmailPending || isPendingPasskey

    if (isSuccess) {
        return (
            <Redirect href={'/(public)/email-sign-in?email=' + email} />
        )
    }

  return (
    <KeyboardAvoidingView style={styles.containerLogin} behavior={'height'}>
...
        </Button>}
        <TextInput
          mode="outlined"
          style={styles.item}
          autoCapitalize="none"
          autoCorrect={false}
          placeholder="Email"
          value={email}
          onChangeText={setEmail}
          autoFocus={true}
        />
        {isError && <Text className="text-red-500 mb-4">Wrong email. Check you're using the right email.</Text>}
        <Link testID="sign-up-link" href={'/(public)/signup'}>
          <Text style={styles.linkText}>Don't have an account? Sign Up!</Text>
        </Link>
      </View>
      <Button testID="sign-in-button" loading={isEmailPending} disabled={isLoading} mode="contained" style={styles.button} onPress={() => signIn({ email })}>
        Sign In
      </Button>
    </KeyboardAvoidingView>
  )
}

