...
      } catch (error) {
        console.log("Error sharing:", error);
      }
    }
  };

  return (
    <View style={[styles.container, { flex: 1, justifyContent: "center" }]}>
      {!isNewParam && (
        <Stack.Screen
          options={{
            title: "Transaction details",
            headerStyle: { backgroundColor: "#277ca5" },
...
              </Text>
              <Text variant="titleMedium" style={styles.item}>
                From:{" "}
              </Text>
              <View style={{ flexDirection: "row", alignItems: "center" }}>
                <Text
                  testID="transaction-from"
                  variant="bodySmall"
                  selectable
                  style={styles.item}
                >
                  {transaction.from}
                </Text>
...
              </View>
              <Text variant="titleMedium" style={styles.item}>
                To:{" "}
              </Text>
              <View style={{ flexDirection: "row", alignItems: "center" }}>
                <Text
                  testID="transaction-to"
                  variant="bodySmall"
                  selectable
                  style={styles.item}
                >
                  {transaction.to}
                </Text>
...
                />
              </View>
              <Text variant="titleMedium" style={styles.item}>
                Block Number:{" "}
              </Text>
              <Text
                testID="transaction-block-number"
                variant="bodyMedium"
                style={styles.item}
              >
                {transaction.blockNumber}
              </Text>
              {transaction.value.gt(0) && (
...
              icon="link-variant"
              style={[styles.fab, { marginRight: 16 }]}
              onPress={openEtherscan}
            />
            {isNewParam && (
              <FAB
                testID="go-to-home-button"
                size="medium"
                icon="home"
                style={[styles.fab, { marginRight: 16 }]}
                onPress={() => {
                  router.navigate("/(auth)");
                }}
...
