...
            handleNameChange={setContactName}
          />
          <Text style={styles.infoText} className="mt-4">
            Enter an address or ENS name
          </Text>
          <ContactInput
            testID="transfer-address-input"
            toAddress={resolvedAddress}
            isResolving={isResolving}
            handleAddressChange={handleInputChange}
            handleInputEndEditing={() => {}}
            isAddressValid={isContactInputEnabled()}
            inputType={inputType}
...
          onPress={() => router.push({ pathname: "scanner" })}
        >
          Scan QR
        </Button>

        <Button
          testID="input-address-next-button"
          style={styles.button}
          mode="contained"
          onPress={handleInputEndEditing}
          disabled={input == ""}
        >
          <Text className="text-white text-center font-bold"> Next</Text>
...
