...
                  <Separator />
                  <Text style={styles.infoText}>
                    Enter the amount and currency
                  </Text>

                  <TransferInput
                    testID="transfer-amount-input"
                    amount={amount}
                    currency={currency}
                    currencies={currencies}
                    isAmountValid={isAmountValid}
                    handleAmountChange={handleAmountChange}
                    setCurrency={setCurrency}
...
          paddingBottom: 4,
          alignItems: "center",
          marginHorizontal: 16,
        }}
      >
        <Button
          testID="transfer-amount-next-button"
          mode="contained"
          style={styles.button}
          onPress={handleNext}
          disabled={
            !isAmountValid ||
            !amount ||
...
