...
              ),
            }}
          />
          <MaterialBottomTabs.Screen
            name="balance"
            options={{
              tabBarAccessibilityLabel: "BalanceBottomTab",
              title: "Balance",
              tabBarIcon: ({ color }) => (
                <MaterialIcons name="balance" size={24} color={color} />
              ),
            }}
          />
          <MaterialBottomTabs.Screen
            name="transfer"
            options={{
              title: "Transfer",
              tabBarAccessibilityLabel: "Transfer",
              tabBarIcon: ({ color }) => (
                <MaterialIcons name="compare-arrows" size={24} color={color} />
              ),
            }}
          />
...
