...
                className="w-2/3"
                mode="outlined"
                value={code}
                onChangeText={setCode}
                textContentType="oneTimeCode"
                keyboardType="number-pad"
                placeholder="Input Code"
            />
            {isError && <Text className="text-red-500">Invalid code. Check your email.</Text>}
            <Button className="m-4" mode="contained" disabled={isPending} onPress={() => complete({ email, code })}>
                <Text>Submit Code</Text>
            </Button>
        </View>
    )
}
